[package]
name = "wyze"
version = "0.1.0"
authors = ["Broderick Carlin <broderick.carlin@gmail.com>",
           "George Hahn <george.hahn.vhs@gmail.com>"]
edition = "2018"

[dependencies]
rusb = {git = "ssh://git@github.com/BroderickCarlin/libusb-rs", branch = "async-fix"}
log = "0.4"
simple_logger = "1.2"
nom = "5.0"
bytes = "0.4"
libc = "0.2"
